# Rust_youtube_metadata

./: Cargo.toml  README.md
