[package]
name = "Rust youtube Meta"
version = "0.2.1"
authors = ["Ruby"]
description = "Rust package to fetch youtube metadata"
repository = "https://github.com/ibeninc/Rust_youtube_metadata"
readme = "README.md"
keywords = ["YouTube", "metadata", "rust", "content", "downloader"]
categories = ["value-formatting", "data-structures"]
license = "MIT"

[dependencies]
hyper = "0.10"
hyper-native-tls = "0.2"
pbr = "1.0.0-alpha.3"
regex = "0.2"
json = "0.11"
